<resources>
    <string name="app_name">Term Tracker</string>
    <string name="term_tracker">Term Tracker</string>
    <string name="cap">Cap</string>
    <string name="enter">Enter</string>
    <string name="save_term">Save Term</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="term_title">Term Title</string>
    <string name="terms">Terms</string>
    <string name="channel_name">Notifications</string>
    <string name="channel_description">Used for sending notifications.</string>
    <string name="details">Details</string>
    <string name="refresh">Refresh</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="get_notification">Get Notification</string>
    <string name="end_date_notice">End Date Notice</string>
    <string name="start_date_notice">Start Date Notice</string>
    <string-array name="status_array">
        <item>In Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
        <item>Plan to take</item>
    </string-array>
    <string-array name="type_array">
        <item>Performance</item>
        <item>Objective</item>
    </string-array>
</resources>