<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/term_tracker"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf=""
        tools:layout_editor_absoluteY="211dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="248dp"
        android:layout_height="53dp"
        android:text="@string/enter"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="enterHere"
        tools:layout_editor_absoluteY="287dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="135dp"
        android:layout_height="135dp"
        app:srcCompat="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@id/textView"
        app:layout_constraintLeft_toLeftOf="@id/textView"
        app:layout_constraintRight_toRightOf="@id/textView"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="54dp"
        android:contentDescription="@string/cap" />

</androidx.constraintlayout.widget.ConstraintLayout>